--- a/greensource_pages/templates/greensource_pages/electrical-design.html
+++ b/greensource_pages/templates/greensource_pages/electrical-design.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Solar Street Lighting</h1>
+            <h1>Solar Lighting</h1>
         </div>
     </div>
 </div>
@@ -18,27 +18,27 @@
     </ol>
 </nav>
 <div class="container padding">
-    <div class="service-list row padding">
-        <div class="col">
+    <div class="row padding">
+        <div class="service-list padding">
             <img src="{% static 'images/solar-light.webp' %}" alt="solar street light" />
             <p>
-                     Solar Street and outdoor lighting is a dependable approach to offer illumination and security that is unconnected to the
-                    conventional electric grid where power outages often occurs. Solar Street lighting can reduce the hazards to public safety
-                    at night hours caused by cars and pedestrian traffic and curb vice appeal within an environment. It encourages a safe, more
-                    livable neighborhoods, brings your neighborhood together by creating well-lit areas that gives people confidence to stroll
-                    home at night, embark on early morning jog and visit play grounds. At Greensource Energy, our aim is to provide Solar lights
-                    where non-existed in communities, commercial centers, parks, Walk way, Street and Roadway. It's a long lasting sustainable
-                    solution and requires few maintenance visits, which is essential in difficult areas to reach.
+                At Greensource Energy Consult, we specialize in providing solar street light services, offering sustainable lighting solutions
+                for streets, highways, parking lots, parks, and other outdoor areas. Our expertise in solar technology allows us
+                to design, install, and maintain solar street light systems that are energy-efficient, cost-effective, and environmentally
+                friendly. Here's an overview of our solar street light services:
             </p>
-            <h4>Our Solar lighting service includes:</h4>
             <ul>
-                <li>Site Visits</li>
-                <li>Security lights</li>
-                <li>Solar Flood lights</li>
-                <li>Solar Street lights</li>
+                <li>Customized Design</li>
+                <li>Energy Efficiency</li>
+                <li>Professional Insttallation</li>
+                <li>Maintenance and Support</li>
                 <li>Component Replacement</li>
-                
             </ul>
+            <p>At Greensource Energy Consult, we are committed to delivering reliable, efficient, and sustainable solar street light services.
+                Whether you need lighting for a small residential street or a large urban development project, we have the expertise
+                to meet your needs. Contact us today to discuss your solar street light requirements and embark on a brighter and
+                more sustainable lighting solution.
+            </p>
         </div>
     </div>
 </div>
