--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Energy Storage Solution</h1>
+            <h1>Off-grid/Backup Power</h1>
         </div>
     </div>
 </div>
@@ -18,36 +18,32 @@
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Energy Storage</li>
+        <li class="breadcrumb-item active">Off-grid</li>
     </ol>
 </nav>
 <div class="container padding">
-    <div class="service-list row padding">
-        <div class="col">
+    <div class="row padding">
+        <div class="service-list padding">
             <img src="{% static 'images/energy-storage.webp' %}" />
             <p>
-                Load demand which can make up as much as 70 percent of your electricity bill, can be significantly reduced with the help
-                of solar energy storage. We design two types of Energy storage;
-                <br/>
-                <span>1. Complete Load Backup:-</span> We develop a system that can support any power consumptionyou require even if the grid
-                goes down by accounting for all your solar energy usuage. This implies that until you peep through your window at your
-                dark neighbourhood, yu won't even be aware that power is out.
-                <br/>
-                <span>2. Critical Load Backup:-</span> With a Critical load battery system, you may choos which necessities you want to continue
-                using in the event of a power outage. that implies that you can keep your lights on during a power outage while saving
-                some money.
-                <br/> Grensource Energy provides cutting-edge energy storage systems that are easy to maintain, environmental friendly and
-                relatively cost effective. Our goal is to assist you in making wise investment in energy storage, wheather it is for
-                Residential or Commercial purpose, hence will increase the value of your facility and take you towards energy independence.
+                At Greensource Energy Consult, we offer comprehensive off-grid and power backup services to ensure reliable and uninterrupted
+                access to electricity, even in areas without a reliable grid connection or during power outages. Our expertise in
+                solar energy and battery storage allows us to design, install, and maintain off-grid systems and backup power solutions
+                tailored to your specific needs. Here's an overview of our off-grid and power backup services:
             </p>
-            <h4>Our Energy Storage Solutions includes:</h4>
             <ul>
-                <li>Storage Analysis</li>
-                <li>Battery Replacement</li>
-                <li>Battery Equalization</li>
-                <li>Storage Troubleshooting</li>
-                <li>Installation of super capacitors</li>
+                <li>off-grid system design</li>
+                <li>Battery Backup solutions</li>
+                <li>Hybrid systems</li>
+                <li>System Installation</li>
+                <li>Load analysis/Optimization</li>
             </ul>
+            <p>At Greensource Energy Consult, we are committed to delivering high-quality off-grid and power backup services that provide
+                reliable and sustainable electricity solutions. Whether you are in a remote area, want to reduce your reliance on
+                the grid, or require backup power for critical operations, we have the expertise to design and install a system that
+                meets your specific needs. Contact us today to explore how our off-grid and power backup solutions can power your
+                energy independence.
+            </p>
         </div>
     </div>
 </div>
