--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Electrical Installation</h1>
+            <h1>Upgrades - Expansion</h1>
         </div>
     </div>
 </div>
@@ -18,30 +18,33 @@
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Electrical Installation</li>
+        <li class="breadcrumb-item active">Upgrades/Expansion</li>
     </ol>
 </nav>
 <div class="container padding">
-    <div class="service-list row padding">
-        <div class="col">
+    <div class="row padding">
+        <div class="service-list padding">
             <img src="{% static 'images/electrical.webp' %}" alt="inverter" />
             <p>
-                You need people you can rely on when it comes to electrical installations. We have extensive experience at Greensource Energy
-                and are ready to work with you on your next project to offer a reliable, professional electrical installation.
-                We offer a wide range of electrical installation services, and our engineers adhere to the highest industry
-                standards. we are skilled in working at design level, through to commissioning, with the requirements of
-                installing new as well as upgrading existing light for Residential / Commercial buildings. We also give preventive
-                maintenance services to our customers on a regular basis. Within a property, our engineers do a series of
-                checks and testing, offering recommendations and eliminating any unnecessary downtime.
+                At Greensource Energy Consult, we offer solar upgrades and expansion services to help you optimize and expand your existing
+                solar energy systems. Whether you want to increase your energy production, improve system efficiency, or accommodate
+                growing energy demands, our team of experts can assess your current setup and provide tailored solutions. Here's
+                an overview of our solar upgrades and expansion services:
             </p>
-            <h4>Our Electrical service includes:</h4>
             <ul>
-                <li>Security lighting</li>
-                <li>Complete light fitting</li>
-                <li>Wiring and re-wiring service</li>
-                <li>LV / MV design and installation</li>
-                <li>Lighting and socket point addition</li>
+                <li>System Assessment</li>
+                <li>Energy Production Optimization</li>
+                <li>Components Upgrades</li>
+                <li>System Expansion</li>
+                <li>Battery Storage Integration</li>
+                <li>Monitoring and Control</li>
             </ul>
+            <p>At Greensource Energy Consult, we are dedicated to helping you optimize and expand your solar energy systems to meet
+                your evolving needs. Our expertise in solar upgrades and expansion ensures that you can take full advantage of the
+                benefits of solar energy, whether it's increasing energy production, enhancing system efficiency, or accommodating
+                future growth. Contact us today to discuss your upgrade or expansion plans and how we can assist you in achieving
+                your goals.
+            </p>
         </div>
     </div>
 </div>
