--- a/greensource_pages/templates/greensource_pages/maintenance-service.html
+++ b/greensource_pages/templates/greensource_pages/maintenance-service.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>System Optimization Maintenance</h1>
+            <h1>Maintenance & Monitoring</h1>
         </div>
     </div>
 </div>
@@ -22,25 +22,28 @@
     </ol>
 </nav>
 <div class="container padding">
-    <div class="service-list row padding">
-        <div class="col">
+    <div class="row padding">
+        <div class="service-list padding">
             <img src="{% static 'images/maintenance.webp' %}" />
-            <p>Solar Energy Systems should and must be maintained even though they are fairly passive in thier operations i.e they don't
-            have any known mechanical part. They need be proactively managed to enhance thier production output, ensure effectiveness
-            and efficiency and optimize your energy investment overtime. Our commitmment and dedication to ensure your solar power investment
-            in the long term has yields its result is the reason we are in business and we intend to be readily available every step
-            of tour investment journey. wheather its our installation or a third party installation we will manage your solar system
-            and ensure they are optimized for performamce production. We would carry out repairs where when needed and ensure your system
-            lives out its useful years.
+            <p>At Greensource Energy Consult, we understand the importance of regular maintenance to ensure the optimal performance
+                and longevity of your solar energy system. Our comprehensive maintenance services are designed to keep your system
+                operating at its best, maximize energy production, and minimize potential issues. Here's an overview of our solar
+                maintenance services:
             </p>
-            <h4>Our Maintenance Services includes:</h4>
             <ul>
-                 <li>Component repairs</li>
-                <li>Landscape Maintenance</li>
-                <li>System troubleshooting</li>
-                <li>Module cleaning and Inspections</li>
-                <li>Scheduled preventive maintenance</li> 
+                <li>Routine Inspections</li>
+                <li>Cleaning and Panel Maintenance</li>
+                <li>Inverter and Electrical System Checks</li>
+                <li>performance Monitoring</li>
+                <li>System Upgrades and Component Replacement</li>
+                <li>Firmware and Software Updates</li>
+                <li>Safety Checks and Compliance</li>
             </ul>
+            <p>At Greensource Energy Consult, we are committed to providing reliable and professional solar maintenance services. Regular
+                maintenance not only optimizes energy production but also helps extend the lifespan of your system, protecting your
+                investment. Contact us today to discuss your solar maintenance needs and how we can assist you in ensuring the long-term
+                performance and efficiency of your solar energy system.
+            </p>
         </div>
     </div>       
 </div>
