--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -23,15 +23,15 @@
 </nav>
 <div class="container padding">
     <div class="row team-heading padding">
-            <p>We are committed to creating value for our clients and customers through project Development and Management, providing the best
-                guidance. Aided by our experience technical team in emerging markets.</p>
+            <p>Our skilled technical team comprises experienced solar technicians and engineers who handle system monitoring, maintenance, and troubleshooting. They ensure that your solar system operates optimally and promptly address any technical issues to maximize its performance.
+                    Our team at Greensource Energy Consult is united by a common goal: to provide industry-leading solar solutions and exceptional customer service. We work together to make the switch to solar energy a seamless and rewarding experience for our valued customers. Contact us today to discover how our team can help you embrace the benefits of solar power and contribute to a sustainable future.</p>
     </div>
 </div>
 <section id="team">
     <div class="team-box-container">
         <div class="member-box member-1">
             <div class="member-img"> 
-                <amp-img src="{% static 'images/ceo.webp' %}" alt="CEO" layout="1" width="1" height="1"></amp-img>
+                <amp-img src="{% static 'images/ceo.jpg' %}" alt="CEO" layout="1" width="1" height="1"></amp-img>
             </div>
             <div class="member-name">
                 <span>OLUMIDE JOSEPH</span>
