--- a/greensource_pages/templates/greensource_pages/project-management.html
+++ b/greensource_pages/templates/greensource_pages/project-management.html
@@ -6,7 +6,7 @@
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Project Management</h1>
+            <h1>Project Planning</h1>
         </div>
     </div>
 </div>
@@ -18,29 +18,34 @@
         <li class="breadcrumb-item">
             <a href="{% url 'services' %}">Services</a>
         </li>
-        <li class="breadcrumb-item active">Project Management</li>
+        <li class="breadcrumb-item active">Project Planning</li>
     </ol>
 </nav>
 <div class="container padding"> 
-        <div class="service-list row padding">
-        <div class="col">
+        <div class="row padding">
+        <div class="service-list padding">
             <img src="{% static 'images/project-handling.jpg' %}" alt="rooftop mounted solar panels" />
-            <p> 
-                 Greensource Energy offer Project development, operations and management services for individuals seeking to invest funds
-                in other areas through cost reduction from solar power systems, Business seeking to save money on their energy system, Property
-                owners looking to increase the value of their portfolios for Sale, Resale value and Rental purposes. We will assist you in
-                weighing your options, putting the best plan into action, delivering the outcomes with continuous management to consistently
-                produce positive outcomes. Our goal is to ensure your system is delivered within time-line, without quality compromise and
-                budget. We pay attention to every details to ensure we use the best resource and manpower to bring your project to life while
-                adhering to best management practices in Engineering and Construction.
+            <p>
+                At Greensource Energy Consult, we offer comprehensive project planning and management services to ensure the successful implementation
+                of your solar projects. Our experienced project managers and teams have the expertise to oversee all aspects of your
+                solar project, from initial planning to final execution. Here's an overview of our project planning and management
+                services:
             </p>
-                <h4>Our Project Services include:</h4>
-                <ul>
-                    <li>Commercial Solar</li>
-                    <li>Residential Solar</li>
-                    <li>Third party Projects</li>
-                    <li>Electrical Installation</li>
-                </ul>
+            <ul>
+                <li>Project Assessment</li>
+                <li>Feasibility study</li>
+                <li>System Design</li>
+                <li>Procurement</li>
+                <li>Construction/Installation</li>
+                <li>Project Monitoring</li>
+                <li>Quality Control</li>
+                <li>Post project support/maintenance</li>
+            </ul>
+            <p>By choosing Greensource Energy Consult for your project planning and management needs, you can rely on our expertise and commitment
+                to delivering successful solar projects. We strive to ensure that your project is completed on time, within budget,
+                and meets your specific requirements. Contact us today to discuss your solar project and how our project planning
+                and management services can benefit you.
+            </p>
         </div>
     </div>
 </div>
