--- a/greensource_pages/templates/greensource_pages/solar-design.html
+++ b/greensource_pages/templates/greensource_pages/solar-design.html
@@ -22,25 +22,26 @@
     </ol>
 </nav>
 <div class="container padding">
-    <div class="service-list row padding">
-        <div class="col">
+    <div class="row padding">
+        <div class="service-list  padding">
             <img src="{% static 'images/residential-solar.webp' %}" alt="rooftop mounted solar panels" />
             <p>
-                 We assist in deciding the best Solar Power System for your energy needs. With over 100kwp installation of decentralized
-                rooftop solar panel installations, we leverage on our expertise and experience to deliver cost-effective long-term solar solution for
-                Homes, Businesses, Agencies, Institutions and Agricutural firms. Our designs are taiored to meet your financial needs, site
-                requirements, homes and business need regardless of your financial background and capacity. we are focused on quality, safety,
-                effectiveness and efficiency of of our solar installation. from Engineering and Procurement to Installation and Project Management.
-                Our goal is to hand over quality solar system that delivers performance optimization and maximum Return on Investment while
-                adhering to standard engineering and installation procedures.
+                At Greensource Energy Consult, we offer comprehensive solar design and installation services to help you harness the power
+                of the sun and transition to clean, renewable energy. Our experienced team of engineers, technicians, and project
+                managers work closely with you to create a customized solar system that meets your specific energy needs and maximizes
+                your return on investment. Here's an overview of our solar design and installation process:
             </p>
-            <h4>Our Design & Installation Services includes:</h4>
             <ul>
-                <li>Site Visits</li>
-                <li>Off-grid Solar</li>
-                <li>Grid Connected Solar</li>
-                <li>Inverter Installation</li>
+                <li>Initial Consultation</li>
+                <li>Site Assessment</li>
+                <li>Customized Design</li>
+                <li>Quotation</li>
+                <li>Installation</li>
             </ul>
+            <p>By choosing us as your best plug for your solar design and installation needs, you can trust that you are partnering
+               with experts who are dedicated to delivering high-quality, reliable, and efficient solar solutions. Contact us today
+               to get started on your solar project and take a significant step towards a sustainable future.
+            </p>
         </div>
     </div>
 </div>
