--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -30,8 +30,8 @@
                             <div class="block">
                                 <i class="fas fa-solar-panel"></i>
                             </div>
-                            <h3><a href="{% url 'solar_design' %}">Solar Installation</a></h3>
-                            <p>We leverage on our expertise and experience to deliver cost-effective long...</p>
+                            <h3><a href="{% url 'solar_design' %}">Design/Installation</a></h3>
+                            <p>We offer comprehensive solar design and installation services to help you harness the power ...</p>
                             <a href="{% url 'solar_design' %}" class="read-more">Read More</a>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                                     <i class="far fa-lightbulb"></i>
                             </div>
                             <h3><a href="{% url 'electrical_design' %}">Solar Lighting</a></h3>
-                            <p>We design and install solar lights for houses, offices, neighborhoods, and market ...</p>
+                            <p>We specialize in providing solar street light services, offering sustainable lighting solutions ...</p>
                             <a href="{% url 'electrical_design' %}" class="read-more">Read More</a>
                         </div>
                     </div>
@@ -54,8 +54,8 @@
                             <div class="block">
                                     <i class="fas fa-car-battery"></i>
                             </div>
-                            <h3><a href="{% url 'energy_management' %}">Energy Storage</a></h3>
-                            <p>We build energy storage for solar energy systems, which is important for ensuring ...</p>
+                            <h3><a href="{% url 'energy_management' %}">Off-Grid/Backup</a></h3>
+                            <p>We offer comprehensive off-grid and power backup services to ensure reliable and uninterrupted</p>
                             <a href="{% url 'energy_management' %}" class="read-more">Read More</a>
                         </div>
                     </div>
@@ -66,8 +66,8 @@
                                 <div class="block">
                                         <i class="fas fa-tasks"></i>
                                 </div>
-                                <h3><a href="{% url 'project_management' %}">Project Management</a></h3>
-                                <p>Greensource Energy offer Project development, operations and management ...</p>
+                                <h3><a href="{% url 'project_management' %}">Project Planning</a></h3>
+                                <p>We offer comprehensive project planning and management services to ensure the successful...</p>
                                 <a href="{% url 'project_management' %}" class="read-more">Read More</a>
                             </div>
                         </div>
@@ -78,8 +78,8 @@
                                 <div class="block">
                                         <i class="fas fa-bolt"></i>
                                 </div>
-                                <h3><a href="{% url 'hvac' %}">Electrical projects</a></h3>
-                                <p>You need people you can rely on when it comes to electrical installations. We have ...</p>
+                                <h3><a href="{% url 'hvac' %}">Upgrades/Expansion</a></h3>
+                                <p>We offer solar upgrades and expansion services to help you optimize and expand your existing...</p>
                                 <a href="{% url 'hvac' %}" class="read-more">Read More</a>
                             </div>
                         </div>
@@ -90,8 +90,8 @@
                                 <div class="block">
                                         <i class="fas fa-tools"></i>
                                 </div>
-                                <h3><a href="{% url 'maintenance_service' %}">Solar Maintenance</a></h3>
-                                <p>Solar Energy Systems should and must be maintained even though they are fairly passive...</p>
+                                <h3><a href="{% url 'maintenance_service' %}">Maintenance</a></h3>
+                                <p>We are committed to providing reliable and professional solar maintenance services. Regular maintenance...</p>
                                 <a href="{% url 'maintenance_service' %}" class="read-more">Read More</a>
                             </div>
                         </div>
