--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -143,7 +143,7 @@
                     <h3><strong>We will take care of it !</strong></h3>
                 </div>
                 <div class="ml-auto">
-                    <a href="{% url 'contact_us' %}" class="btn btn-dark rounded-0 py-3 px-7">Get a Free Quote</a>
+                    <a href="{% url 'contact_us' %}" class="btn btn-dark rounded-0 py-3 px-7">Go Solar Today</a>
                 </div>
             </div>
             <div class="row">
@@ -159,16 +159,16 @@
                             <a href="{% url 'solar_design' %}">Installation</a>
                         </li>
                         <li>
-                                <a href="{% url 'electrical_design' %}">Street lighting</a>
+                                <a href="{% url 'electrical_design' %}">Solar lighting</a>
                             </li>
                         <li>
                             <a href="{% url 'maintenance_service' %}">Maintenance</a>
                         </li>
                         <li>
-                            <a href="{% url 'energy_management' %}">Energy storage </a>
+                            <a href="{% url 'energy_management' %}">Off-grid/Backup </a>
                         </li>
                         <li>
-                            <a href="{% url 'hvac' %}">Electrical</a>
+                            <a href="{% url 'hvac' %}">Upgrades/Expansion</a>
                         </li>
                     </ul>
                 </div>
@@ -204,11 +204,10 @@
                     </ul>
                 </div>
                 <div class="col-sm">
-                    <h3>Connect us</h3>
+                    <h3>Connect Us</h3>
                     <ul class="list-unstyled links">
                         <li>
-                            <p><strong>Ogun</strong> :- Heritage by Anobi Noah Street, arogun bustop, Mowe-Ofada Ogun.</p>
-                            <p><strong>Lagos</strong> :- 9/11 Matuwo Street opp NNPC filling station Mushin Road.</p>
+                            <p>Heritage by Anobi Noah Street, arogun bustop, Mowe-Ofada Ogun.</p>
                         </li>
                         <li>
                             <span>
@@ -257,7 +256,7 @@
         <i class="fa fa-arrow-up"></i>
     </a>
     <p class="copyright">
-        <small>&copy; Copyright &copy; 2022 All Rights Reserved | Greensource Energy</small>
+        <small>&copy; Copyright &copy; 2020-2023 All Rights Reserved | Greensource Energy</small>
     </p>
 </footer>
     <script async src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
