--- a/greensource_pages/templates/greensource_pages/maintenance-service.html
+++ b/greensource_pages/templates/greensource_pages/maintenance-service.html
@@ -1,12 +1,12 @@
 {% extends 'base_layout.html' %}
 {% block nav-service %} active {% endblock %}
 {% load static %}
-{% block title %}Solar System Optimization and Maintenance {{ block.super }}{% endblock %}
+{% block title %}Solar System Maintenance {{ block.super }}{% endblock %}
 {% block content %}
 <div class="container-fluid padding">
     <div class="header row padding">
         <div class="col-12 animated fadeIn">
-            <h1>Maintenance & Monitoring</h1>
+            <h1>Maintenance/Monitoring</h1>
         </div>
     </div>
 </div>
@@ -24,7 +24,7 @@
 <div class="container padding">
     <div class="row padding">
         <div class="service-list padding">
-            <img src="{% static 'images/maintenance.webp' %}" />
+            <img src="{% static 'images/maintenance.jpg' %}" />
             <p>At Greensource Energy Consult, we understand the importance of regular maintenance to ensure the optimal performance
                 and longevity of your solar energy system. Our comprehensive maintenance services are designed to keep your system
                 operating at its best, maximize energy production, and minimize potential issues. Here's an overview of our solar
@@ -35,7 +35,7 @@
                 <li>Cleaning and Panel Maintenance</li>
                 <li>Inverter and Electrical System Checks</li>
                 <li>performance Monitoring</li>
-                <li>System Upgrades and Component Replacement</li>
+                <li>System Upgrades & Component Replacement</li>
                 <li>Firmware and Software Updates</li>
                 <li>Safety Checks and Compliance</li>
             </ul>
